--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <img src="img/crp-ofc (6).jpg" alt="">
             </div>
 
-            <div class="sponsors">
+            <div class="sponsors container flex fl-cn">
                 <h3>nasa</h3>
                 <h3>spacex</h3>
                 <h3>tesla</h3>
